2009-06-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #3526: Use eID API for graphical and audio captcha generation.

2009-05-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #3472: No image rendering in T3 V4.3 alpha3.

2009-05-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #3244: User can set the width of the generated captcha-image. Thanks to Simon Schick.

2009-04-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Added Russian translation. Thanks to Андрей Аксенов.

2009-04-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #3052: "onclick" should be used instead of "onClick". Thanks to Gerald Schwarz.
	* Fixed bug: Random number generator should be seeded.

2009-04-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Removed some words from the default word list.
	* Added partial Russian translation. Thanks to Esben Fest.
	* Updated manual.
	* Updated ext_emconf from TER version 1.1.2

2009-01-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated manual.
	* Updated ext_emconf from TER version 1.1.1

2009-01-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Initial upload to TYPO3 Forge
	* Cleanup: Use UNIX line separators in all files
	* Fix for current TYPO3 trunk (4.3-dev) caching
	* Update version number to 1.1.1
	* Default to local installation
	* Fixed bug #10132: sr_freecap seems to work only with default language. Thanks to Dan GrÃ¼nzig.
	* Follow-up to issue #10132: Adding comments
	* Added Polish translation. Thanks to Daniel Ciunkiewicz.
	* Correction to the manual. Thanks to Niklas Kanthak.
	* Remove superfluous spaces in rendered html. Thanks to Niklas Kanthak.
	* ###SR_FREECAP_ACCESSIBLE### marker should produce inline html. Audio object wrapper changed from div to span. Thanks to Niklas Kanthak.
	* Updated manual: random background type does not exist anymore with freecap 1.4.
	* Added missing images for Morphed image blocks option of backgroundType.
	* Updated damaged images.