@@ -27,6 +27,14 @@
  */
 
 require_once(t3lib_extMgm::extPath('sr_freecap').'pi3/class.tx_srfreecap_pi3.php');
+if (t3lib_div::int_from_ver($GLOBALS['TYPO_VERSION']) < 4003000) {
+	require_once(PATH_tslib.'class.tslib_fe.php');
+	require_once(PATH_t3lib.'class.t3lib_userauth.php');
+	require_once(PATH_tslib.'class.tslib_feuserauth.php');
+	require_once(PATH_t3lib.'class.t3lib_tstemplate.php');
+	require_once(PATH_t3lib.'class.t3lib_page.php');
+	require_once(PATH_tslib.'class.tslib_content.php');
+}
 
 // ***********************************
 // Creating a $TSFE object
